feat: create cancel flow on skin check

--- a/Sunwise/View/Onboarding/Base.lproj/Main.storyboard
+++ b/Sunwise/View/Onboarding/Base.lproj/Main.storyboard
@@ -230,6 +230,9 @@
                                 <color key="tintColor" name="CL-mainRed"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Cancel"/>
+                                <connections>
+                                    <action selector="buttonCancelTapped:" destination="Gb2-Ua-9Dr" eventType="touchUpInside" id="7Ro-5I-uxV"/>
+                                </connections>
                             </button>
                         </barButtonItem>
                     </navigationItem>
